// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile renders correctly 1`] = `
<div
  className="css-0"
>
  <div
    className="css-k008qs"
  >
    <div
      className="css-0"
    >
      testName
    </div>
    <div
      className="css-tv6mvw"
      onClick={[Function]}
    >
      <svg
        className="css-1ouh3uu"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          className="css-0"
          d="M17.586 11l-2.293-2.293a1 1 0 1 1 1.414-1.414l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414-1.414L17.586 13H10a1 1 0 0 1 0-2h7.586zM15 3a1 1 0 0 1 0 2H7a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 1 0 2H7a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h8z"
          fill="#000"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`UserProfile renders correctly 2`] = `
<div
  className="css-0"
>
  <div
    className="css-k008qs"
  >
    <div
      className="css-0"
    />
    <div
      className="css-tv6mvw"
    >
      <svg
        className="css-1ouh3uu"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          className="css-0"
          d="M17.586 11l-2.293-2.293a1 1 0 1 1 1.414-1.414l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414-1.414L17.586 13H10a1 1 0 0 1 0-2h7.586zM15 3a1 1 0 0 1 0 2H7a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 1 0 2H7a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h8z"
          fill="#000"
        />
      </svg>
    </div>
  </div>
</div>
`;
